Add http basic auth password support and docs

--- a/gerrit_mcp_server/gerrit_config.sample.json
+++ b/gerrit_mcp_server/gerrit_config.sample.json
@@ -7,7 +7,7 @@
       "authentication": {
         "type": "http_basic",
         "username": "your-username",
-        "auth_token": "your-auth-token"
+        "password": "your-password-or-token"
       }
     },
     {
